# Multimodal-Extension-of-LesionLocator

./: .gitignore  eval_track.sh  eval_track_ct.sh  pyproject.toml  readme.md  train_track_cmd.sh  train_track_cmd_ct.sh
documentation/: prompting.md
lesionlocator/: configuration.py
lesionlocator/imageio/: natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  simpleitk_reader_writer.py  tif_reader_writer.py
lesionlocator/inference/: data_iterators.py  export_prediction.py  lesionlocator_segment.py  lesionlocator_segment_and_track.py  lesionlocator_segment_and_track_embed.py  sliding_window_prediction.py
lesionlocator/modules/: __init__.py  fusion_modules.py  multimodal_unet.py  tracknet.py
lesionlocator/preprocessing/cropping/: cropping.py
lesionlocator/preprocessing/normalization/: default_normalization_schemes.py  map_channel_name_to_normalization.py
lesionlocator/preprocessing/preprocessors/: default_preprocessor.py  training_preprocessor.py
lesionlocator/preprocessing/resampling/: default_resampling.py  resample_torch.py  utils.py
lesionlocator/training/: data_iterators.py  data_wrapper.py  train_segment.py  train_track_c.py  utils.py
lesionlocator/training/LesionLocatorTrainer/: LesionLocatorTrainerSegment.py  LesionLocatorTrainerTrack.py
lesionlocator/utilities/: benchmark_fusion.py  default_n_proc_DA.py  file_path_utilities.py  get_network_from_plans.py  surface_distance_based_measures.py  utils.py
lesionlocator/utilities/label_handling/: label_handling.py
lesionlocator/utilities/plans_handling/: plans_handler.py
lesionlocator/utilities/prompt_handling/: create_prompt_jsons_from_seg.py  prompt_handler.py
scripts/: benchmark_fusion.sh  eval_seg_ct.sh  eval_seg_pet.sh  eval_seg_petct.sh  eval_seg_petct_intermediate_combined.sh  eval_seg_petct_intermediate_mcsa.sh  eval_seg_petct_intermediate_tamw.sh  eval_seg_petct_intermediate_weighted.sh  eval_track_ct.sh  eval_track_pet.sh  eval_track_petct.sh  train_seg_ct.sh  train_seg_pet.sh  train_seg_petct.sh  train_seg_petct_intermediate_combined.sh  train_seg_petct_intermediate_mcsa.sh  train_seg_petct_intermediate_tamw.sh  train_seg_petct_intermediate_weighted.sh  train_track_ct.sh  train_track_pet.sh  train_track_petct.sh
tests/: test_ct_passthrough.py
